--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2>Blog</h2>
             <article>
                 <h3>Exploring New Recipes</h3>
-                <p>Recently, I've been experimenting with japanese dishes. The vibrant flavors and healthy ingredients make them a favorite!</p>
+                <p>Recently, I've been experimenting with kerala dishes. The vibrant flavors and healthy ingredients make them a favorite!</p>
             </article>
             <article>
                 <h3>My Photography Journey</h3>
